# CppRobotics

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: example.yml  examples.yml  install.yml  macos.yml  standalone.yml  style.yml  ubuntu.yml  windows.yml
all/: CMakeLists.txt
documentation/: CMakeLists.txt  conf.py
examples/: CMakeLists.txt
examples/cubic_spline_interpolation/: CMakeLists.txt  main.cpp
examples/extended-kalman-filter/: CMakeLists.txt  dynamics.h  main.cpp  todo.py
examples/extended_kalman_filter/: CMakeLists.txt  dynamics.hpp  main.cpp
examples/infinite_horizon_lqr/: CMakeLists.txt  main.cpp
examples/infinite_horizon_lqr_plot/: CMakeLists.txt  main.cpp
examples/pid/: CMakeLists.txt  main.cpp
include/greeter/: greeter.h
include/robotics/: common.h  common.hpp  linear-control.h  path-planning.h  robotics.h  robotics.hpp
include/robotics/classical-control/: classical-control.h  classical-control.hpp  pid.h  pid.hpp
include/robotics/classical_control/: classical_control.hpp  pid.hpp
include/robotics/estimation/: estimation.h  estimation.hpp  extended-kalman-filter.h  extended_kalman_filter.h  extended_kalman_filter.hpp
include/robotics/linear-control/: linear-control.h  linear-control.hpp  linear-quadratic-regulator.h  lqr.h
include/robotics/linear_control/: linear_control.hpp  linear_quadratic_regulator.hpp  lqr.hpp
include/robotics/model/: linear-system.h  model.h  nonlinear-system.h  observed-system.h  system.h
include/robotics/path-planning/: lqr-planner.h  lqr.h
include/robotics/polynomial/: cubic_spline_interpolation.h  cubic_spline_interpolation.hpp  cubic_spline_interpolation_2d.h  cubic_spline_interpolation_2d.hpp
include/robotics/system/: linear-system.h  linear-system.hpp  linear_system.hpp  nonlinear-system.h  nonlinear-system.hpp  nonlinear_system.hpp  system-base.h  system.h  system.hpp  system_base.hpp
source/: greeter.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: greeter.cpp  robotics.cpp
test/source/common/: linspace.cpp
test/source/linear-control/: linear-quadratic-regulator.cpp  lqr.cpp
test/source/linear_control/: linear_quadratic_regulator.cpp  lqr.cpp
test/source/path-planning/: lqr-planner.cpp  lqr.cpp
tests/: CMakeLists.txt  main.cpp
